feat(ui): add marquee brands section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,12 @@
 body {
   color: #ffff;
 }
+.rfm-marquee,
+.rfm-marquee-container,
+.rfm-initial-child-container {
+  display: flex;
+  gap: 3.25rem;
+}
 
 @layer components {
   .wrapper {
