fix: resolve marquee styles

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,9 +6,8 @@ body {
   color: #ffff;
 }
 .rfm-marquee,
-.rfm-marquee-container,
 .rfm-initial-child-container {
-  display: flex;
+  display: grid;
   gap: 3.25rem;
 }
 
