feat: add footer section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+html,
 body {
   color: #ffff;
+  scroll-behavior: smooth;
 }
 .rfm-marquee,
 .rfm-marquee-container,
@@ -21,7 +22,7 @@ body {
 
 @layer components {
   .wrapper {
-    @apply mx-auto my-0 max-w-7xl p-2.5;
+    @apply mx-auto my-0 max-w-7xl p-2.5 sm:p-5;
   }
 
   .font {
